no google verification

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       che riguarda la mia persona. Scoprirai i progetti che ho sviluppato e avrai l'opportunità 
       di conoscere meglio chi sono!"
     />
-    <meta name="google-site-verification" content="iqXEvzzHRw148Tq7BxDs1VsmkAWFzQE-1HHf5ZVjDKk" />
+    <!-- <meta name="google-site-verification" content="iqXEvzzHRw148Tq7BxDs1VsmkAWFzQE-1HHf5ZVjDKk" /> -->
 
     <title>Alba Luca</title>
 
