Piccoli fix grafici

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="row justify-content-center align-items-center container-vislualizzatore-progetti">
                     <div class="col-12" data-aos="fade-right" data-aos-offset="110" data-aos-easing="ease-in-sine">
                         <div class="row sottolinea-progetti">
-                            <div class="col-11 d-flex justify-content-start align-items-center descrizione-progetto">
+                            <div class="col-7 d-flex justify-content-start align-items-center descrizione-progetto">
                                 <img src="./img/Immagine_SitoWeb.jpg" alt="immagine siti" height="90px" width="130" class="img-thumbnail">
 
                                 <div>
@@ -190,8 +190,8 @@
                                 </div>
                             </div>
 
-                            <div class="col-1 justify-content-start align-items-center">
-                                <div class="d-flex justify-content-end">
+                            <div class="col-5 justify-content-start align-items-center ml-4">
+                                <div class="d-flex justify-content-end align-items-center">
                                     <a href="./progetti.html#progetti_sitiweb" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'))">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
                                     </a>
@@ -202,7 +202,7 @@
 
                     <div class="col-12" data-aos="fade-right" data-aos-offset="110" data-aos-easing="ease-in-sine">
                         <div class="row sottolinea-progetti">
-                            <div class="col-11 d-flex justify-content-start align-items-center descrizione-progetto">
+                            <div class="col-7 d-flex justify-content-start align-items-center descrizione-progetto">
                                 <img src="./img/Immagine_WebApp.jpg" alt="immagine web app" height="90px" width="130" class="img-thumbnail">
 
                                 <div>
@@ -211,8 +211,8 @@
                                 </div>
                             </div>
 
-                            <div class="col-1 justify-content-start align-items-center">
-                                <div class="d-flex justify-content-end">
+                            <div class="col-5 justify-content-start align-items-center ml-4">
+                                <div class="d-flex justify-content-end align-items-center">
                                     <a href="./progetti.html#progetti_webapp" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'))">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
                                     </a> 
@@ -223,7 +223,7 @@
 
                     <div class="col-12" data-aos="fade-right" data-aos-offset="110" data-aos-easing="ease-in-sine">
                         <div class="row sottolinea-progetti">
-                            <div class="col-11 d-flex justify-content-start align-items-center descrizione-progetto">
+                            <div class="col-7 d-flex justify-content-start align-items-center descrizione-progetto">
                                 <img src="./img/Immagine_Python.jpg" alt="immagine python" height="90px" width="130" class="img-thumbnail">
 
                                 <div>
@@ -232,8 +232,8 @@
                                 </div>
                             </div>
 
-                            <div class="col-1 justify-content-start align-items-center">
-                                <div class="d-flex justify-content-end">
+                            <div class="col-5 justify-content-start align-items-center ml-4">
+                                <div class="d-flex justify-content-end align-items-center">
                                     <a href="./progetti.html#progetti_python" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'))">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
                                     </a>
@@ -253,10 +253,10 @@
             <div class="col-11">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="title-name" data-aos-offset="100" data-aos="fade-down-right">Dove contattarmi</h2> 
+                        <div class="title-name" data-aos-offset="100" data-aos="fade-down-right">Dove contattarmi</div> 
                         <div class="yellow-line-long-2 leave-margin" data-aos-offset="50" data-aos="fade-down-right"></div>
 
-                        <div class="row">
+                        <div class="row ">
                             <a href="https://www.instagram.com/alba_luca_/" target="_blank" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-11 blocchi-skill d-flex align-items-center mt-4 ml-3" data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine">
                                 <img src="./img/Instagram_Logo.png" height="30" width="30" alt="html logo"><strong style="color: white;">&nbsp alba_luca</strong>
                             </a>
