--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                         <h2 class="title-name" data-aos-offset="100" data-aos="fade-down-right">About me</h2> 
                         <div class="yellow-line leave-margin" data-aos-offset="50" data-aos="fade-down-right"></div>
 
-                        <p data-aos-offset="10" data-aos="fade-right">
+                        <p data-aos-offset="10" data-aos="fade-right" class="mia-descrizione">
                             Sono Alba Luca Francesco, ho attualmente 18 anni (nel 2023), e sono nato il 19 luglio 2005 a Bietigheim-Bissingen, in Germania. 
                             La mia nazionalità è italiana e sono fiero di condividere con voi alcuni aspetti della mia personalità e delle mie passioni.
                             Fin da giovane, ho coltivato una passione profonda per la programmazione, un mondo in cui riesco a esprimere la mia creatività 
