Modifiche grafiche e logiche

--- a/about.html
+++ b/about.html
@@ -114,20 +114,16 @@
         <div class="row justify-content-center" data-aos="fade-up">
             <div class="col-11 blocco-skill-principali">
                 <div class="row justify-content-center container-blocchi">
-                    <div class="col-2 d-flex justify-content-center align-items-center blocchi-skill">
+                    <div class="col-3 d-flex justify-content-center align-items-center blocchi-skill">
                         <img src="./img/javascript_logo.png" height="30" width="30" alt="html logo"><strong class="solo-loghi">&nbsp PROGRAMMAZIONE</strong>
                     </div>
 
-                    <div class="col-2 d-flex justify-content-center align-items-center blocchi-skill">
+                    <div class="col-3 d-flex justify-content-center align-items-center blocchi-skill">
                         <img src="./img/Ai_Logo.png" height="30" width="30" alt="html logo"><strong class="solo-loghi">&nbsp AI</strong>
                     </div>
 
-                    <div class="col-2 d-flex justify-content-center align-items-center blocchi-skill">
+                    <div class="col-3 d-flex justify-content-center align-items-center blocchi-skill">
                         <img src="./img/Montaggio_Logo.png" height="30" width="30" alt="html logo"><strong class="solo-loghi">&nbsp MONTAGGIO</strong>
-                    </div>
-
-                    <div class="col-2 d-flex justify-content-center align-items-center blocchi-skill">
-                        <img src="./img/Sicurezza_Logo.png" height="30" width="35" alt="html logo"><strong class="solo-loghi">&nbsp SICUREZZA</strong>
                     </div>
                 </div>
             </div>
@@ -145,20 +141,17 @@
                         <div class="yellow-line leave-margin" data-aos-offset="50" data-aos="fade-down-right"></div>
 
                         <p data-aos-offset="10" data-aos="fade-right" class="mia-descrizione">
-                            Sono Alba Luca Francesco, ho attualmente 18 anni (nel 2023), e sono nato il 19 luglio 2005 a Bietigheim-Bissingen, in Germania. 
-                            La mia nazionalità è italiana e sono fiero di condividere con voi alcuni aspetti della mia personalità e delle mie passioni.
-                            Fin da giovane, ho coltivato una passione profonda per la programmazione, un mondo in cui riesco a esprimere la mia creatività 
-                            e a sfidare costantemente me stesso. Tuttavia, la mia curiosità non si limita solo a questo campo, in quanto nutro un forte 
-                            interesse anche per l'intelligenza artificiale, che trovo affascinante per le sue infinite potenzialità nel plasmare il futuro.
-                            Oltre a immergermi nell'universo della tecnologia, trovo grande soddisfazione nell'assemblaggio di computer, un'attività che mi 
-                            permette di comprendere a fondo il funzionamento interno delle macchine e di personalizzarle in base alle mie esigenze. La sicurezza 
-                            informatica è un'altra sfera che mi appassiona, poiché mi spinge a essere sempre un passo avanti nel proteggere le informazioni sensibili 
-                            e garantire la privacy. Tuttavia, la mia vita non è solo digitale. Ho una profonda affinità per i viaggi, che finora mi hanno portato a 
-                            esplorare diverse parti dell'Europa. Sogno di ampliare i miei orizzonti e di scoprire luoghi nuovi oltre i confini europei. 
-                            Questa curiosità mi spinge a imparare costantemente e ad adattarmi a diverse situazioni.
-                            In conclusione, sono un giovane italiano con una passione intramontabile per la tecnologia, la programmazione e l'intelligenza artificiale. 
-                            Sfrutto ogni opportunità per ampliare le mie conoscenze e le mie esperienze, sia nel mondo virtuale che in quello reale. Non vedo l'ora di 
-                            vedere dove il mio percorso mi porterà successivamente, esplorando le molteplici sfaccettature del mondo che mi circonda.
+                            Sono Alba Luca Francesco, nato il 19 luglio 2005 a Bietigheim-Bissingen, in Germania, ma 
+                            di nazionalità italiana. A 18 anni, sono orgoglioso di condividere alcuni aspetti 
+                            della mia personalità e delle mie passioni. Fin da giovane, ho avuto una profonda passione per 
+                            la programmazione, dove posso esprimere la mia creatività e mettermi alla prova costantemente. 
+                            Ma la mia curiosità non si ferma qui: mi interesso anche all'intelligenza artificiale per le sue 
+                            incredibili potenzialità nel plasmare il futuro. Amo anche assemblare computer, perché mi permette 
+                            di comprendere il loro funzionamento interno e personalizzarli secondo le mie esigenze. La sicurezza 
+                            informatica è un'altra sfera che mi appassiona, poiché mi impegna a proteggere le informazioni sensibili 
+                            e la privacy. Ma non tutto ruota intorno alla tecnologia: mi piace viaggiare e ho già esplorato diverse 
+                            parti dell'Europa. Sogno di ampliare i miei orizzonti oltre i confini europei e questa curiosità mi spinge 
+                            a imparare costantemente e ad adattarmi a nuove situazioni.
                         </p>
                     </div>
 
