--- a/index.html
+++ b/index.html
@@ -122,20 +122,16 @@
         <div class="row justify-content-center" data-aos="fade-up">
             <div class="col-11 blocco-skill-principali">
                 <div class="row justify-content-center container-blocchi">
-                    <div class="col-2 d-flex justify-content-center align-items-center blocchi-skill">
+                    <div class="col-3 d-flex justify-content-center align-items-center blocchi-skill">
                         <img src="./img/html_logo.png" height="30" width="30" alt="html logo"><strong class="solo-loghi">&nbsp HTML</strong>
                     </div>
 
-                    <div class="col-2 d-flex justify-content-center align-items-center blocchi-skill">
-                        <img src="./img/css_logo.png" height="30" width="30" alt="html logo"><strong class="solo-loghi">&nbspCSS</strong>
+                    <div class="col-3 d-flex justify-content-center align-items-center blocchi-skill">
+                        <img src="./img/css_logo.png" height="30" width="30" alt="css logo"><strong class="solo-loghi">&nbspCSS</strong>
                     </div>
 
-                    <div class="col-2 d-flex justify-content-center align-items-center blocchi-skill">
-                        <img src="./img/javascript_logo.png" height="30" width="30" alt="html logo"><strong class="solo-loghi">&nbspJAVASCRIPT</strong>
-                    </div>
-
-                    <div class="col-2 d-flex justify-content-center align-items-center blocchi-skill">
-                        <img src="./img/react_logo.png" height="30" width="35" alt="html logo"><strong class="solo-loghi">&nbspREACT</strong>
+                    <div class="col-3 d-flex justify-content-center align-items-center blocchi-skill">
+                        <img src="./img/javascript_logo.png" height="30" width="30" alt="js logo"><strong class="solo-loghi">&nbspJAVASCRIPT</strong>
                     </div>
                 </div>
             </div>
@@ -150,28 +146,28 @@
                 <div class="row mb-4">
                     <h2 data-aos-offset="110" data-aos="zoom-in">Cosa posso fare per le tue esigenze</h2>
                     <p class="mt-3 testo-body mb-5" data-aos-offset="10" data-aos="zoom-in">
-                        Opta per l'eccellenza, non per l'abbondanza o le soluzioni economiche.
-                        Scelgo di offrirti la massima qualità nei miei servizi a un prezzo straordinario.
+                        Opta per l'eccellenza, non per l'abbondanza. Scelgo di offrirti la 
+                        massima qualità nei miei servizi a un prezzo straordinario.
                         Non aspettare oltre per dare vita al tuo sito: mettiti in contatto ora!
                     </p>
 
                     <div class="col-xl-5 col-lg-5 col-md-5 col-sm-6 col-12 sposta-sinistra" data-aos="zoom-in-right">
-                        <h5 class="titolo-body"><strong class="progetti-pubblicati-numero">12</strong>+</h5>
+                        <h5 class="titolo-body"><strong class="progetti-pubblicati-numero">0</strong>+</h5>
                         <p class="testo-body">Progetti pubblicati</p>
                     </div>
 
                     <div class="col-xl-5 col-lg-5 col-md-5 col-sm-6 col-12 sposta-sinistra" data-aos="zoom-in-right">
-                        <h5 class="titolo-body"><strong class="progetti-sviluppati-numero">30</strong>+</h5>
+                        <h5 class="titolo-body"><strong class="progetti-sviluppati-numero">0</strong>+</h5>
                         <p class="testo-body">Progetti sviluppati</p>
                     </div>
 
                     <div class="col-xl-5 col-lg-5 col-md-5 col-sm-6 col-12 sposta-sinistra" data-aos="zoom-in-right">
-                        <h5 class="titolo-body"><strong class="progetti-iconici-numero">6</strong>+</h5>
+                        <h5 class="titolo-body"><strong class="progetti-iconici-numero">0</strong>+</h5>
                         <p class="testo-body">I più iconici</p>
                     </div>
 
                     <div class="col-xl-5 col-lg-5 col-md-5 col-sm-6 col-12 sposta-sinistra" data-aos="zoom-in-right">
-                        <h5 class="titolo-body"><strong class="progetti-webapp-numero">10</strong>+</h5>
+                        <h5 class="titolo-body"><strong class="progetti-webapp-numero">0</strong>+</h5>
                         <p class="testo-body">Web app</p>
                     </div>
                 </div>
@@ -181,7 +177,7 @@
                 <div class="row justify-content-center align-items-center container-vislualizzatore-progetti">
                     <div class="col-12" data-aos="fade-right" data-aos-offset="110" data-aos-easing="ease-in-sine">
                         <div class="row sottolinea-progetti">
-                            <div class="col-7 d-flex justify-content-start align-items-center descrizione-progetto">
+                            <div class="col-8 d-flex justify-content-start align-items-center descrizione-progetto">
                                 <img src="./img/Immagine_SitoWeb.jpg" alt="immagine siti" height="90px" width="130" class="img-thumbnail">
 
                                 <div>
@@ -190,9 +186,9 @@
                                 </div>
                             </div>
 
-                            <div class="col-5 justify-content-start align-items-center ml-4">
+                            <div class="col-4 justify-content-start align-items-center ml-4">
                                 <div class="d-flex justify-content-end align-items-center">
-                                    <a href="./progetti.html#progetti_sitiweb" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'))">
+                                    <a href="./progetti.html" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'sw')">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
                                     </a>
                                 </div>
@@ -202,7 +198,7 @@
 
                     <div class="col-12" data-aos="fade-right" data-aos-offset="110" data-aos-easing="ease-in-sine">
                         <div class="row sottolinea-progetti">
-                            <div class="col-7 d-flex justify-content-start align-items-center descrizione-progetto">
+                            <div class="col-8 d-flex justify-content-start align-items-center descrizione-progetto">
                                 <img src="./img/Immagine_WebApp.jpg" alt="immagine web app" height="90px" width="130" class="img-thumbnail">
 
                                 <div>
@@ -211,9 +207,9 @@
                                 </div>
                             </div>
 
-                            <div class="col-5 justify-content-start align-items-center ml-4">
+                            <div class="col-4 justify-content-start align-items-center ml-4">
                                 <div class="d-flex justify-content-end align-items-center">
-                                    <a href="./progetti.html#progetti_webapp" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'))">
+                                    <a href="./progetti.html" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'wa')">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
                                     </a> 
                                 </div>
@@ -223,7 +219,7 @@
 
                     <div class="col-12" data-aos="fade-right" data-aos-offset="110" data-aos-easing="ease-in-sine">
                         <div class="row sottolinea-progetti">
-                            <div class="col-7 d-flex justify-content-start align-items-center descrizione-progetto">
+                            <div class="col-8 d-flex justify-content-start align-items-center descrizione-progetto">
                                 <img src="./img/Immagine_Python.jpg" alt="immagine python" height="90px" width="130" class="img-thumbnail">
 
                                 <div>
@@ -232,9 +228,9 @@
                                 </div>
                             </div>
 
-                            <div class="col-5 justify-content-start align-items-center ml-4">
+                            <div class="col-4 justify-content-start align-items-center ml-4">
                                 <div class="d-flex justify-content-end align-items-center">
-                                    <a href="./progetti.html#progetti_python" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'))">
+                                    <a href="./progetti.html" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'ap')">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
                                     </a>
                                 </div>
@@ -260,7 +256,7 @@
                                 <img src="./img/Instagram_Logo.png" height="30" width="30" alt="html logo"><strong style="color: white;">&nbsp alba_luca</strong>
                             </a>
 
-                            <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJNqLdPNMSmrfGHRzHKvXSVhLDQmxDPhdqSlDhPkrHssJbghtlDwCspbZHMDnJplSxprsmL" target="_blank" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-11 blocchi-skill d-flex align-items-center mt-4 ml-3" data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine">
+                            <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJZWPbxTHkWbNKTKCgfKxPcpCjdxJfwsvVLdbCMPnCsHsHvdmbTZRBfWXcMkqqvbjqBPPDq" target="_blank" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-11 blocchi-skill d-flex align-items-center mt-4 ml-3" data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine">
                                 <img src="./img/Gmail_logo.png" height="30" width="30" alt="html logo"><strong style="color: white;">&nbsp albalucafra@gmail.com</strong>
                             </a>
                         </div>
