--- a/progetti.html
+++ b/progetti.html
@@ -116,19 +116,15 @@
         <div class="row justify-content-center" data-aos="fade-up">
             <div class="col-11 blocco-skill-principali">
                 <div class="row justify-content-center container-blocchi">
-                    <!-- <div class="col-2 d-flex justify-content-center align-items-center blocchi-skill">
-                        <img src="./img/Frontend_Logo.png" height="30" width="30" alt="html logo"><strong class="solo-loghi">&nbsp FRONTEND</strong>
-                    </div> -->
-
-                    <div class="col-3 d-flex justify-content-center align-items-center blocchi-skill sw blocchi-sel" onclick="carica_progetti('sw')">
+                    <div class="col-3 d-flex justify-content-center align-items-center blocchi-skill sw" onclick="carica_progetti('sw')">
                         <img src="./img/html_logo.png" height="30" width="30" alt="html logo"><strong class="solo-loghi">&nbsp SITI WEB</strong>
                     </div>
 
-                    <div class="col-3 d-flex justify-content-center align-items-center blocchi-skill wa blocchi-sel" onclick="carica_progetti('wa')">
+                    <div class="col-3 d-flex justify-content-center align-items-center blocchi-skill wa" onclick="carica_progetti('wa')">
                         <img src="./img/react_logo.png" height="30" width="35" alt="react logo"><strong class="solo-loghi">&nbsp WEP APP</strong>
                     </div>
 
-                    <div class="col-3 d-flex justify-content-center align-items-center blocchi-skill ap blocchi-sel" onclick="carica_progetti('ap')">
+                    <div class="col-3 d-flex justify-content-center align-items-center blocchi-skill ap" onclick="carica_progetti('ap')">
                         <img src="./img/python_logo.png" height="30" width="30" alt="python logo"><strong class="solo-loghi">&nbsp APP PYTHON</strong>
                     </div>
                 </div>
