Aggiunta anchor progetti

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
                             <div class="col-4 justify-content-start align-items-center ml-4">
                                 <div class="d-flex justify-content-end align-items-center">
-                                    <a href="./progetti.html" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'sw')">
+                                    <a href="./progetti.html#progetti_anchor" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'sw')">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
                                     </a>
                                 </div>
@@ -209,7 +209,7 @@
 
                             <div class="col-4 justify-content-start align-items-center ml-4">
                                 <div class="d-flex justify-content-end align-items-center">
-                                    <a href="./progetti.html" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'wa')">
+                                    <a href="./progetti.html#progetti_anchor" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'wa')">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
                                     </a> 
                                 </div>
@@ -230,7 +230,7 @@
 
                             <div class="col-4 justify-content-start align-items-center ml-4">
                                 <div class="d-flex justify-content-end align-items-center">
-                                    <a href="./progetti.html" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'ap')">
+                                    <a href="./progetti.html#progetti_anchor" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'ap')">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
                                     </a>
                                 </div>
