--- a/progetti.html
+++ b/progetti.html
@@ -135,7 +135,7 @@
 
 
         <!-- Inizio body sito -->
-        <div class="row mt-6 d-flex justify-content-center container-progetti">
+        <div class="row mt-6 d-flex justify-content-center container-progetti" id="progetti_anchor">
             <div class="row justify-content-center contenitore-progetti-dev all-proj"></div>
         </div>
         <!-- Fine body sito -->
