--- a/progetti.html
+++ b/progetti.html
@@ -178,7 +178,13 @@
         </div>
 
         <div class="row justify-content-center crediti-finali">
-            <strong>Sito portfolio di Alba Luca Francesco</strong>
+            <div class="col-6 d-flex justify-content-end">
+                <a href="https://www.iubenda.com/privacy-policy/38123905" class="iubenda-white iubenda-noiframe iubenda-embed iub-legal-only iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+            </div>
+            
+            <div class="col-6 d-flex justify-content-start">
+                <a href="https://www.iubenda.com/privacy-policy/38123905/cookie-policy" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe " title="Cookie Policy ">Cookie Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+            </div>
         </div>
         <!-- Fine footer -->
 
@@ -189,5 +195,11 @@
     <script src='https://code.jquery.com/jquery-3.2.1.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN' crossorigin='anonymous'></script>
     <script src='https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js' integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q' crossorigin='anonymous'></script>
     <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js' integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin='anonymous'></script>
+    <script type="text/javascript">
+        var _iub = _iub || [];
+        _iub.csConfiguration = {"applyGdprForCH":false,"askConsentAtCookiePolicyUpdate":true,"enableFadp":true,"enableGdpr":false,"fadpApplies":true,"floatingPreferencesButtonColor":"#FDFDFD00","floatingPreferencesButtonDisplay":"bottom-left","preferenceCookie":{"expireAfter":180},"siteId":3682433,"usPreferencesWidgetDisplay":"anchored-bottom-right","whitelabel":false,"cookiePolicyId":38123905,"lang":"it", "banner":{ "acceptButtonDisplay":true,"backgroundOverlay":true,"closeButtonDisplay":false,"customizeButtonDisplay":true,"listPurposes":true,"position":"bottom","rejectButtonDisplay":true,"showTitle":false,"showTotalNumberOfProviders":true }};
+        </script>
+        <script type="text/javascript" src="https://cs.iubenda.com/autoblocking/3682433.js"></script>
+    <script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
 </body>
 </html>
