--- a/progetti.html
+++ b/progetti.html
@@ -179,7 +179,7 @@
 
         <div class="row justify-content-center crediti-finali">
             <div class="col-6 d-flex justify-content-end">
-                <a href="https://www.iubenda.com/privacy-policy/38123905" class="iubenda-white iubenda-noiframe iubenda-embed iub-legal-only iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+                <a href="https://www.iubenda.com/privacy-policy/38123905" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
             </div>
             
             <div class="col-6 d-flex justify-content-start">
@@ -197,7 +197,7 @@
     <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js' integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin='anonymous'></script>
     <script type="text/javascript">
         var _iub = _iub || [];
-        _iub.csConfiguration = {"applyGdprForCH":false,"askConsentAtCookiePolicyUpdate":true,"enableFadp":true,"enableGdpr":false,"fadpApplies":true,"floatingPreferencesButtonColor":"#FDFDFD00","floatingPreferencesButtonDisplay":"bottom-left","preferenceCookie":{"expireAfter":180},"siteId":3682433,"usPreferencesWidgetDisplay":"anchored-bottom-right","whitelabel":false,"cookiePolicyId":38123905,"lang":"it", "banner":{ "acceptButtonDisplay":true,"backgroundOverlay":true,"closeButtonDisplay":false,"customizeButtonDisplay":true,"listPurposes":true,"position":"bottom","rejectButtonDisplay":true,"showTitle":false,"showTotalNumberOfProviders":true }};
+        _iub.csConfiguration = {"applyGdprForCH":false,"askConsentAtCookiePolicyUpdate":true,"enableFadp":true,"enableGdpr":false,"fadpApplies":true,"floatingPreferencesButtonColor":"#FDFDFD00","floatingPreferencesButtonDisplay":"bottom-left","preferenceCookie":{"expireAfter":180},"siteId":3682433,"usPreferencesWidgetDisplay":"anchored-bottom-right","whitelabel":false,"cookiePolicyId":38123905,"lang":"it", "banner":{ "acceptButtonCaptionColor":"#FFFFFF","acceptButtonColor":"#0073CE","acceptButtonDisplay":true,"backgroundColor":"#FFFFFF","backgroundOverlay":true,"closeButtonDisplay":false,"customizeButtonCaptionColor":"#4D4D4D","customizeButtonColor":"#DADADA","customizeButtonDisplay":true,"listPurposes":true,"position":"bottom","rejectButtonCaptionColor":"#FFFFFF","rejectButtonColor":"#0073CE","rejectButtonDisplay":true,"showTitle":false,"showTotalNumberOfProviders":true,"textColor":"#000000" }};
         </script>
         <script type="text/javascript" src="https://cs.iubenda.com/autoblocking/3682433.js"></script>
     <script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
