--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
                             <div class="col-4 justify-content-start align-items-center ml-4">
                                 <div class="d-flex justify-content-end align-items-center">
-                                    <a href="./progetti.html" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'sw')">
+                                    <a href="./progetti.html#progetti_anchor" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'sw')">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
                                     </a>
                                 </div>
@@ -209,7 +209,7 @@
 
                             <div class="col-4 justify-content-start align-items-center ml-4">
                                 <div class="d-flex justify-content-end align-items-center">
-                                    <a href="./progetti.html" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'wa')">
+                                    <a href="./progetti.html#progetti_anchor" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'wa')">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
                                     </a> 
                                 </div>
@@ -230,7 +230,7 @@
 
                             <div class="col-4 justify-content-start align-items-center ml-4">
                                 <div class="d-flex justify-content-end align-items-center">
-                                    <a href="./progetti.html" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'ap')">
+                                    <a href="./progetti.html#progetti_anchor" class="freccia-proj" onclick="evidenzia(document.querySelector('.progetti-text'), 'ap')">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
                                     </a>
                                 </div>
@@ -305,10 +305,15 @@
         </div>
 
         <div class="row justify-content-center crediti-finali">
-            <strong>Sito portfolio di Alba Luca Francesco</strong>
+            <div class="col-6 d-flex justify-content-end">
+                <a href="https://www.iubenda.com/privacy-policy/38123905" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+            </div>
+            
+            <div class="col-6 d-flex justify-content-start">
+                <a href="https://www.iubenda.com/privacy-policy/38123905/cookie-policy" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe " title="Cookie Policy ">Cookie Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+            </div>
         </div>
         <!-- Fine footer -->
-
 
     </div>
 
@@ -317,5 +322,11 @@
     <script src='https://code.jquery.com/jquery-3.2.1.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN' crossorigin='anonymous'></script>
     <script src='https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js' integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q' crossorigin='anonymous'></script>
     <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js' integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin='anonymous'></script>
+    <script type="text/javascript">
+        var _iub = _iub || [];
+        _iub.csConfiguration = {"applyGdprForCH":false,"askConsentAtCookiePolicyUpdate":true,"enableFadp":true,"enableGdpr":false,"fadpApplies":true,"floatingPreferencesButtonColor":"#FDFDFD00","floatingPreferencesButtonDisplay":"bottom-left","preferenceCookie":{"expireAfter":180},"siteId":3682433,"usPreferencesWidgetDisplay":"anchored-bottom-right","whitelabel":false,"cookiePolicyId":38123905,"lang":"it", "banner":{ "acceptButtonCaptionColor":"#FFFFFF","acceptButtonColor":"#0073CE","acceptButtonDisplay":true,"backgroundColor":"#FFFFFF","backgroundOverlay":true,"closeButtonDisplay":false,"customizeButtonCaptionColor":"#4D4D4D","customizeButtonColor":"#DADADA","customizeButtonDisplay":true,"listPurposes":true,"position":"bottom","rejectButtonCaptionColor":"#FFFFFF","rejectButtonColor":"#0073CE","rejectButtonDisplay":true,"showTitle":false,"showTotalNumberOfProviders":true,"textColor":"#000000" }};
+        </script>
+        <script type="text/javascript" src="https://cs.iubenda.com/autoblocking/3682433.js"></script>
+    <script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
 </body>
 </html>
