Piccoli miglioramenti grafici

--- a/about.html
+++ b/about.html
@@ -137,10 +137,8 @@
             <div class="col-11">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="title-name" data-aos-offset="100" data-aos="fade-down-right">About me</h2> 
-                        <div class="yellow-line leave-margin" data-aos-offset="50" data-aos="fade-down-right"></div>
-
-                        <p data-aos-offset="10" data-aos="fade-right" class="mia-descrizione">
+                        <h2 class="title-name" data-aos-offset="100" data-aos="fade-down-right">About me</h2>
+                        <p data-aos-offset="10" data-aos="fade-right" class="mia-descrizione testo-body">
                             Sono Alba Luca Francesco, nato il 19 luglio 2005 a Bietigheim-Bissingen, in Germania, ma 
                             di nazionalità italiana. A 18 anni, sono orgoglioso di condividere alcuni aspetti 
                             della mia personalità e delle mie passioni. Fin da giovane, ho avuto una profonda passione per 
