messo h2 il titolo "Dove contattarmi"

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             <div class="col-11">
                 <div class="row">
                     <div class="col-12">
-                        <div class="title-name" id="zona-contatti" data-aos-offset="100" data-aos="fade-down-right">Dove contattarmi</div> 
+                        <h2 class="title-name" id="zona-contatti" data-aos-offset="100" data-aos="fade-down-right">Dove contattarmi</h2> 
                         
                         <div class="row">
                             <a href="https://www.instagram.com/alba_luca_/" target="_blank" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-11 blocchi-skill d-flex align-items-center mt-4 ml-3" data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine">
