--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
-<body onload="carica_impostazioni()">
+<body>
     <div class="container-fluid">
 
         <!-- Inizio navbar -->
