Rimossi margini inutili (2)

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="row justify-content-center mt-6 contenitore-about">
             <div class="col-11">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 tog-mp">
                         <h2 class="title-name" id="zona-about" data-aos-offset="100" data-aos="fade-down-right">About me</h2>
                         <p data-aos-offset="10" data-aos="fade-right" class="mia-descrizione testo-body">
                             Sono Alba Luca Francesco, nato il 19 luglio 2005 a Bietigheim-Bissingen, in Germania, ma 
@@ -265,7 +265,7 @@
                         </p>
                     </div>
 
-                    <div class="col-12 mt-3" id="animazionePercentuale">
+                    <div class="col-12 tog-mp mt-3" id="animazionePercentuale">
                         <div class="row">
                             <div class="col-12">
                                 <div class="row">
@@ -445,7 +445,7 @@
 
         <!-- Inizio body sito progetti -->
         <div class="row justify-content-center mt-5" data-aos="fade-up">
-            <div class="col-11">
+            <div class="col-11 tog-mp">
                 <h2 class="title-name" id="zona-progetti" data-aos-offset="100" data-aos="fade-down-right">Progetti sviluppati</h2>
             </div>
 
@@ -475,7 +475,7 @@
         <div class="row justify-content-center mt-6 contenitore-about">
             <div class="col-11">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 tog-mp">
                         <h2 class="title-name" id="zona-contatti" data-aos-offset="100" data-aos="fade-down-right">Dove contattarmi</h2> 
                         
                         <div class="row">
@@ -503,7 +503,7 @@
 
         <!-- Inizio footer -->
         <div class="row justify-content-around contenitore-mio-footer mt-6">
-            <div class="col-xl-5 col-lg-5 col-md-5 col-11 d-flex justify-content-center">
+            <div class="col-xl-5 col-lg-5 col-md-5 col-11 tog-mp d-flex justify-content-center">
                 <div>
                     <h2 class="sotto-titolo">Le mie conoscenze</h2>
                     <p>
@@ -515,7 +515,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-5 col-lg-5 col-md-5 col-11 d-flex justify-content-center">
+            <div class="col-xl-5 col-lg-5 col-md-5 col-11 tog-mp d-flex justify-content-center">
                 <div>
                     <h2 class="sotto-titolo">La mia passione</h2>
                     <p>
